k8/spring-boot-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: spring-boot-redis
  labels:
    app: spring-boot-redis
    app.kubernetes.io/component: spring-boot-redis
    app.kubernetes.io/instance: spring-boot-redis
    app.kubernetes.io/name: spring-boot-redis
    app.kubernetes.io/part-of: spring-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-redis
  template:
    metadata:
      labels:
        app: spring-boot-redis
        deploymentconfig: spring-boot-redis
    spec:
      containers:
        - name: spring-boot-redis
          image: quay.io/geoallen/spring-boot-session-redis
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
