k8/spring-boot-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: spring-boot-redis
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: spring-boot-redis
